[package]
name = "rocksdb-sqlite-bench"
publish = false
version = "0.1.0"
authors = ["kk 3168582@qq.com"]
edition = "2018"


[dependencies]
criterion = {version="0.3.0"}
rocksdb = { git = "https://github.com/tikv/rust-rocksdb.git"}
rusqlite= { version = "0.24.2", features = ["bundled","chrono"], default-features = false }
tempfile = "3.1.0"
cid = { default-features = false, version = "0.5" }
multihash = { default-features = false, version = "0.11" }



# [[bench]]
# name = "rocksdb"
# harness = false

[[bench]]
name = "sqlite"
harness = false

